<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Rotation">


    <TextView
        android:id="@+id/x_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/x_value"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/y_value"
        app:layout_constraintEnd_toStartOf="@+id/y_value"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/y_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="16dp"
        android:text="@string/y_value"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/z_value"
        app:layout_constraintStart_toEndOf="@+id/x_value"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/z_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/z_value"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/y_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/y_value" />

</android.support.constraint.ConstraintLayout>

